[package]
name = "xdu"
version = "0.4.1"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
rayon = "1.10"
parquet = { version = "56", features = ["arrow"] }
arrow = { version = "56", features = ["chrono-tz"] }
jwalk = "0.8"
anyhow = "1"
indicatif = "0.17"
console = "0.15"
duckdb = { version = "1", features = ["bundled"] }
chrono = "0.4"
infer = "0.19"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3"
libc = "0.2"

[[bin]]
name = "xdu"
path = "src/bin/xdu.rs"

[[bin]]
name = "xdu-find"
path = "src/bin/xdu-find.rs"

[[bin]]
name = "xdu-view"
path = "src/bin/xdu-view.rs"

[[bin]]
name = "xdu-rm"
path = "src/bin/xdu-rm.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
